<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/navbar"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/btnColor"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="100dp"
            android:backgroundTint="@color/btnColor"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:padding="10dp"
        android:layout_height="300dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_verticalAlign="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/uploadbtn"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnColor"
            android:text="@string/upload" />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutApp"
            android:textSize="24sp"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paragraph1"
            android:textSize="14sp"
            android:layout_marginTop="80dp"
            android:textColor="@color/textColor"
            />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paragraph2"
            android:textSize="14sp"
            android:layout_marginTop="130dp"
            android:textColor="@color/textColor"
            />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paragraph3"
            android:textSize="14sp"
            android:layout_marginTop="190dp"
            android:textColor="@color/textColor"
            />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>