<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            >
            <TextView
                android:labelFor="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                />
            <EditText
                android:id="@+id/username"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:padding="20dp"
                android:hint="@string/username"
                android:background="@color/inputColor"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            >
            <TextView
                android:labelFor="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />
            <EditText
                android:id="@+id/email"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:padding="20dp"
                android:hint="@string/email"
                android:background="@color/inputColor"
                android:inputType="textEmailAddress"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:labelFor="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                />
            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:hint="@string/password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:background="@color/inputColor"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:labelFor="@+id/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmPassword"
                />
            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:hint="@string/confirmPassword"
                android:id="@+id/confirmPassword"
                android:inputType="textPassword"
                android:background="@color/inputColor"
                />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/btnColor"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>